tests/syntax/good/testfile-ident-1.go
package main
func main() { _a := 42 }
