tests/syntax/bad/testfile-semicolon-10.go
package main

func main() { if 1 < 2 {}; else {} }
